Use URL namespace

--- a/woordeboek/templates/woordeboek/index.html
+++ b/woordeboek/templates/woordeboek/index.html
@@ -163,6 +163,6 @@
 
 <pre>Programmatiese gebruik (API): /api?q=SOEKTERM (&amp;raw=1 sluit oorspronklike data in).</pre>
 <pre>Met dank aan <a href="https://viva-afrikaans.org">viva-afrikaans.org</a> en <a href="http://humanities.nwu.ac.za/centre-text-technology">NWU CTexT</a>.</pre>
-<pre>Sien <a href="{% url 'stats' %}">stats</a>.</pre>
+<pre>Sien <a href="{% url 'woordeboek:stats' %}">stats</a>.</pre>
 </body>
 </html>
