Add notice to index template

--- a/woordeboek/templates/woordeboek/index.html
+++ b/woordeboek/templates/woordeboek/index.html
@@ -141,6 +141,9 @@
 </head>
 <body>
 <h1>Afrikaans</h1>
+<p>Resultate word van eksterne bronne verkry.<br>
+Historiese resultate toon aan dat soekterme met meer as een woord niks oplewer.<br>
+Prakties gesproke is hierdie diens alleenlik geskik om losstaande woorde na te slaan.</p>
 <div id="search">
   <form method="get">
     <input name="q" placeholder="soekterm" {% if q %}value="{{ q }}"{% endif %}>
