--- a/woordeboek/templates/woordeboek/stats.html
+++ b/woordeboek/templates/woordeboek/stats.html
@@ -3,6 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Stats</title>
+  <style>
+    html { font-family: monospace }
+	  table { border-collapse: collapse; border: 1px solid }
+	  th { text-align: left; padding-left: 0.4rem; padding-right: 0.4rem; background-color:#ccc; font-weight: bold }
+    tr {border-bottom: 1px solid #aaa}
+    tr:hover { background-color: #ddd }
+    td:nth-of-type(1), td:nth-of-type(2) { padding-right: 20px }
+  </style>
 </head>
 <body>
   <table>
@@ -20,7 +28,7 @@
       {% for q in queries %}
       <tr>
         <td>{{ q.query }}</td>
-        <td>{{ q.time_created }}</td>
+        <td>{{ q.time_created|date:"Y-m-d H:i" }}</td>
         <td>{{ q.num_results }}</td>
         <td>{{ q.response_time }}</td>
         <td>{{ q.country }}</td>
